@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/player.c: fix find_better_arrow() comment, allow parameter to be NULL.
+Nicolas Weeger 2007-08-11
+
 doc/Developers/map.dox: add some real content.
 Nicolas Weeger 2007-08-09
 
